2012-08-27  Alexander V. Lukyanov <lav@yars.free.net>

	* DHT.cc, DHT.h: add rate limit; improve FindNodes by checking
	  PrefixMatch on every next route bucket.

2012-08-24  Alexander V. Lukyanov <lav@yars.free.net>

	* network.cc: fixed port byte order in compact.
	* Torrent.cc, Torrent.h: split DHT off; save DHT to separate directory;
	  check peer duplication and black-listing after setting port.
	* DHT.cc, DHT.h: new files; send pings only when there is new node
	  candidate and bucket is full; limit ping rate; change disk-cache
	  format, save node_id too; handle changing node_id of remote nodes.
	* network.cc, network.h: (sockaddr_compact) new class.
	* StatusLine.cc: call termcap functions from StatusLine ctor, not _init.

2012-08-22  Alexander V. Lukyanov <lav@yars.free.net>

	* network.cc: fixed set_compact for ipv6.
	* Torrent.cc, Torrent.h: limit udp send rate; check POLLOUT before
	  sending a udp packet; tune dht timers; improve logging;
	  save node id in sent requests; try to send find request to all nodes
	  if no good nodes found; fixed route bucket splitting.
	* ResMgr.cc, ResMgr.h: (NumberPair) new type; support number power
	  suffix in ranges and pairs.

2012-08-20  Alexander V. Lukyanov <lav@yars.free.net>

	* network.cc, network.h; make set_compact return bool.
	* Bencode.h: add lookup* methods.
	* Torrent.cc, Torrent.h: init ping_lost_count properly; make ValidNodeId
	  call MakeNodeId, move masks info MakeNodeId; fixed route table refreshing;
	  check address type before using; use new lookup methods.

2012-08-16  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc: fixed ut_metadata total_size.
	* xmap.cc, xmap.h: (each_finished, exists) new methods.
	* network.cc, network.h: (set_compact(const char*,size_t)) new method.
	* Torrent.cc, Torrent.h: added ut_pex extension; remember if the torrent
	  is private; remember is a peer is upload_only; (Seed) new method;
	  set tracker error only if last URL failed; disallow huge packets.